[gd_scene load_steps=22 format=2]

[ext_resource path="res://resource/sounds/monster/2.wav" type="AudioStream" id=1]
[ext_resource path="res://src/characters/enemy1/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://resource/sprites/characters/characters.png" type="Texture" id=3]
[ext_resource path="res://resource/sounds/steps/5.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "landing",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "jump",
"speed": 2.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "punch",
"speed": 3.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "slash",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 9, 15 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 10, 2.588, 9.659, 5, 8.66, 7.071, 7.071, 8.66, 5, 9.659, 2.588, 10, 0, 9.659, -2.588, 8.66, -5, 7.071, -7.071, 5, -8.66, 2.588, -9.659, 0, -10 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, -14, 8, -2, 8, 13, -8, 13, -8, -2 )

[node name="Enemy" type="KinematicBody2D"]
z_index = 6
z_as_relative = false
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
walk_speed = 50
run_speed = 130
jump_speed = 60

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 1.6, 2.4 )
freeze_bodies = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.65, 0.65 )
frames = SubResource( 14 )
animation = "jump"
frame = 1
playing = true

[node name="CatchArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 193

[node name="CatchShape" type="CollisionShape2D" parent="CatchArea"]
position = Vector2( 2, 0 )
shape = SubResource( 15 )

[node name="VisionPoint" type="Position2D" parent="."]
position = Vector2( 0, -8 )

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -8, 8 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="RayDownRight" type="RayCast2D" parent="."]
position = Vector2( 16, 12 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="RayDownLeft" type="RayCast2D" parent="."]
position = Vector2( -16, 12 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="Visibility" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="VisibilyShape" type="CollisionShape2D" parent="Visibility"]
scale = Vector2( 5.5, 5.5 )
z_as_relative = false
shape = SubResource( 16 )

[node name="BodyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerLanding" type="Timer" parent="."]
one_shot = true

[node name="AudioVoice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -3.0
max_distance = 125.0
attenuation = 2.0

[node name="AudioStep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 100.0
[connection signal="area_entered" from="CatchArea" to="." method="_on_CatchArea_area_entered"]
[connection signal="area_exited" from="CatchArea" to="." method="_on_CatchArea_area_exited"]
[connection signal="body_entered" from="CatchArea" to="." method="_on_CatchArea_body_entered"]
[connection signal="body_exited" from="CatchArea" to="." method="_on_CatchArea_body_exited"]
[connection signal="area_entered" from="Visibility" to="." method="_on_Visibility_area_entered"]
[connection signal="area_exited" from="Visibility" to="." method="_on_Visibility_area_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
